--- a/app/src/main/res/layout/layout_others.xml
+++ b/app/src/main/res/layout/layout_others.xml
@@ -237,7 +237,46 @@
                 android:layout_marginRight="16dp"
                 android:background="@color/color_line_text"
                 />
+            <RelativeLayout
+                android:id="@+id/layout_yjfk"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp">
+                <ImageView
+                    android:id="@+id/img_yj"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_action_yjfk"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_toRightOf="@+id/img_yj"
+                    android:text="意见反馈"
+                    android:textColor="@color/bottom_normal_color"
+                    android:textSize="16sp" />
 
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerCrop"
+                    android:src="@mipmap/icon_arr" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@color/color_line_text"
+                />
             <RelativeLayout
                 android:id="@+id/layout_kf"
                 android:layout_width="match_parent"
